--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -86,9 +86,9 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace 'net.odgn.expostarter'
+    namespace 'net.odgn.skiavectorballs'
     defaultConfig {
-        applicationId 'net.odgn.expostarter'
+        applicationId 'net.odgn.skiavectorballs'
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
