--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
         <category android:name="android.intent.category.DEFAULT"/>
         <category android:name="android.intent.category.BROWSABLE"/>
         <data android:scheme="myapp"/>
-        <data android:scheme="net.odgn.expostarter"/>
+        <data android:scheme="net.odgn.skiavectorballs"/>
       </intent-filter>
     </activity>
   </application>
