--- a/ios/SkiaVectorBalls/Info.plist
+++ b/ios/SkiaVectorBalls/Info.plist
@@ -7,7 +7,7 @@
     <key>CFBundleDevelopmentRegion</key>
     <string>$(DEVELOPMENT_LANGUAGE)</string>
     <key>CFBundleDisplayName</key>
-    <string>odgn-expo-starter</string>
+    <string>Skia Vector Balls</string>
     <key>CFBundleExecutable</key>
     <string>$(EXECUTABLE_NAME)</string>
     <key>CFBundleIdentifier</key>
@@ -28,7 +28,7 @@
         <key>CFBundleURLSchemes</key>
         <array>
           <string>myapp</string>
-          <string>net.odgn.expostarter</string>
+          <string>net.odgn.skiavectorballs</string>
         </array>
       </dict>
     </array>
