--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "odgn-expo-starter",
+  "name": "skia-vector-balls",
   "main": "src/index.tsx",
   "version": "0.0.1",
   "scripts": {
     "start": "expo start",
-    "prebuild": "bunx expo@latest prebuild --clean",
+    "prebuild": "bunx expo@latest prebuild",
+    "prebuild:clean": "bunx expo@latest prebuild --clean",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
