--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,11 @@
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "strict": true,
+    "module": "ESNext",
     "paths": {
+      "@assets/*": [
+        "./assets/*"
+      ],
       "@components/*": [
         "./src/components/*"
       ],
@@ -24,12 +28,14 @@
       "@types": [
         "./src/types.ts"
       ]
-    }
+    },
+    "resolveJsonModule": true
   },
   "include": [
     "**/*.ts",
     "**/*.tsx",
     ".expo/types/**/*.ts",
-    "expo-env.d.ts"
+    "expo-env.d.ts",
+    "assets/**/*"
   ]
 }
