--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.3",
+    "react-native-edge-to-edge": "^1.1.3",
     "react-native-gesture-handler": "~2.21.2",
     "react-native-reanimated": "~3.16.3",
     "react-native-safe-area-context": "4.14.0",
