chore: moved 3d related to own folder

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,9 @@
     "strict": true,
     "module": "ESNext",
     "paths": {
+      "@3d/*": [
+        "./src/3d/*"
+      ],
       "@assets/*": [
         "./assets/*"
       ],
